<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/valueLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/modeText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Green"
        android:gravity="center"
        android:height="30dip"
        android:text="@string/app_name"
        android:textColor="@color/White" >
    </TextView>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modeText"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:gravity="fill_horizontal|left" >

        <EditText
            android:id="@+id/valueText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/valueTolerance"
            android:layout_alignTop="@+id/valueTolerance"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:layout_toLeftOf="@+id/valueTolerance"
            android:hint="@string/value"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:text="@string/blank" >
        </EditText>

        <Spinner
            android:id="@+id/valueTolerance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/valueUnit" >
        </Spinner>

        <Spinner
            android:id="@+id/valueUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="3dip" >
        </Spinner>

        <Button
            android:id="@+id/valueEnter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/valueUnit"
            android:text="@string/enter" >
        </Button>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1" >

        <TableLayout
            android:id="@+id/resultTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >
        </TableLayout>
    </ScrollView>

</RelativeLayout>